--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "ejs": "~0.8.4",
     "composable-middleware": "^0.3.0",
     "connect-mongo": "^0.4.1",
-    "mongoskin": "^1.4.4"
+    "mongoskin": "^1.4.4",
+    "mysql":"~2.5.4"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
